# battery-disassembly-computer-vision

./: .gitignore  README.md  devlog.md
RegistrationExamples/: CMakeLists.txt  basic.cpp  can_pose_estimation.cpp  driver_pose_estimation.cpp  escl_test_capture.cpp  hw.cpp  owl_composite.cpp  owl_pose_estimation.cpp  visualizer_snippet.cpp
other/SDF_world_test/: downloaded_model.sh  test_world.sdf
other/camera-test/: building_robot.sdf
other/hello/: hello.cpp
other/opencvVerification/: CMakeLists.txt  opencvVerify.cpp
other/pointCloudBackground/: CMakeLists.txt  vizEx.cpp
other/ppf_test/: CMakeLists.txt
other/ppf_test/src/: ppf_test.cpp
other/ros_gz_transport_test/example_ws/: README.md
other/ros_gz_transport_test/example_ws/setup/: environment.sh
other/ros_gz_transport_test/example_ws/src/example_launch/: CMakeLists.txt  package.xml
other/ros_gz_transport_test/example_ws/src/example_launch/launch/: ros_gz.xml
other/ros_gz_transport_test/example_ws/src/image_subscriber/: CMakeLists.txt  package.xml
other/ros_gz_transport_test/example_ws/src/image_subscriber/src/: image_subscriber.cpp
other/ros_gz_transport_test/example_ws/src/twist_publisher/: CMakeLists.txt  package.xml
other/ros_gz_transport_test/example_ws/src/twist_publisher/src/: twist_node.cpp
other/ros_gz_transport_test/example_ws/src/worlds/: CMakeLists.txt  package.xml
other/ros_gz_transport_test/example_ws/src/worlds/assets/STL_GZ/: model.config  model.sdf
other/ros_gz_transport_test/example_ws/src/worlds/assets/STL_GZ/meshes/: STL_GZ.STL
other/ros_gz_transport_test/example_ws/src/worlds/setup/: environment.bash
other/ros_gz_transport_test/example_ws/src/worlds/worlds/: example_world.sdf
